--- a/games.yaml
+++ b/games.yaml
@@ -777,10 +777,6 @@
   info: "MyMan is a video game for color and monochrome text terminals in the genre of Namco's Pac-Man."
 
 
-- name: Nuzzle (N-curses p-UZZLE)
-  url: https://github.com/dead-end/nuzzle
-  info: Nuzzle is a terminal based puzzle game collection.
-
 - name: nclife
   url: https://github.com/mikepierce/ncLife
   info: "Conway's Game of Life in C++ using ncurses."
@@ -840,10 +836,11 @@
   info: ncurses based sudoku game
   screencast: https://asciinema.org/a/34070
 
-- name: nuzzle
+- name: nuzzle (N-curses p-UZZLE)
   url: https://github.com/dead-end/nuzzle
   info: Nuzzle is a terminal based puzzle game collection.
   screencast: https://github.com/dead-end/nuzzle/blob/master/res/nuzzle-example.gif?raw=true
+
 
 
 
