--- a/games.yaml
+++ b/games.yaml
@@ -1230,6 +1230,11 @@ read. Go too slow and you'll get wound up in the scroll and crushed."
   info: A variant of the robots game.
   play: telnet or ssh on sdf.org
 
+- name: tossug-arena
+  url: https://github.com/tossug/tossug-arena
+  info: Board-Gamelets Arena for poor AI Players.
+  screencast: https://user-images.githubusercontent.com/6536345/35132167-d0d8b240-fd04-11e7-8eff-d83152d9a3d3.gif
+  
 - name: tower of mediocrity
   url: https://web.archive.org/web/20131205100524/http://www.cavein.org/~chris/code/tower/
   info: A tower defense game. Unfortunately, the game is quite easy to win.
