Add Allure of the Stars (#42)
Add Allure of the Stars

--- a/games.yaml
+++ b/games.yaml
@@ -84,6 +84,11 @@
 - name: alienwave
   url: https://www.alessandropira.org/alienwave/aw.html
   info: another good variant of the space invaders game.
+  
+- name: Allure of the Stars
+  url: http://www.allureofthestars.com/
+  info: near-future Sci-Fi roguelike and tactical squad combat game; emulates a terminal, but with --frontendANSI runs on normal Unix terminal
+  screencast: http://www.allureofthestars.com/play  
 
 - name: angband
   url: https://rephial.org/
